--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <meta name="github" content="https://github.com/Aoudumber-Bade">
     <link rel="website icon" type="png" href="heart.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Love Confession Website | Aoudumber Bade</title>
+    <title>Qazie</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&display=swap');
@@ -94,7 +94,7 @@
         <div class="content">
             <div class="text"><i class="fa-solid fa-heart"></i>To You!<i class="fa-solid fa-heart"></i></div>
             <div class="text-crush" id="text-crush"></div>
-            <div id="yours">- Yours Aoudumber 💗</div>
+            <div id="yours">-  💗</div>
         </div>
     </div>
 
