--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,7 @@
     <div class="wrapper">
         <div class="items"></div>
         <div class="content">
-            <div class="text"><i class="fa-solid fa-heart"></i>To You!<i class="fa-solid fa-heart"></i></div>
+            <div class="text"><i class="fa-solid fa-heart"></i>To You MAHAAAA!<i class="fa-solid fa-heart"></i></div>
             <div class="text-crush" id="text-crush"></div>
             <div id="yours">-  💗</div>
         </div>
