--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
     <meta name="github" content="https://github.com/Aoudumber-Bade">
     <link rel="website icon" type="png" href="heart.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Qazie</title>
+    <title>Qazi</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;600&display=swap');
